--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-cookies": "^1.8.3",
     "vue-cookies-reactive": "^2.1.1",
     "vue-router": "^3.6.5",
+    "vue2-editor": "^2.10.3",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
