--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "element-ui": "^2.15.14",
     "js-cookie": "^3.0.5",
     "socialite": "^1.0.0",
     "vue": "^2.6.14",
+    "vue-chartjs": "^4.0.0",
     "vue-cookies": "^1.8.3",
     "vue-cookies-reactive": "^2.1.1",
     "vue-router": "^3.6.5",
